hydro2/hydro2-network-wire-derive/tests/trybuild/fail_no_op_keyword.stderr
error: Expected `op`, found `foo`
 --> tests/trybuild/fail_no_op_keyword.rs:7:23
  |
7 | #[available_operators(foo="Bar")]
  |                       ^^^
